i18n/fr/docusaurus-plugin-content-docs/version-26.10/installation/_database-remote-install.mdx
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import DatabaseConfiguration from './_database-configuration.mdx';

> Si vous installez la base de données sur un serveur dédié, ce serveur doit également avoir
> les dépôts requis.

Exécutez la commande suivante sur le serveur central :

<Tabs groupId="os">
<TabItem value="Alma / RHEL / Oracle Linux 9" label="Alma / RHEL / Oracle Linux 9">

```shell
dnf install -y centreon-central
```

</TabItem>
<TabItem value="Alma / RHEL / Oracle Linux 10" label="Alma / RHEL / Oracle Linux 10">

```shell
dnf install -y centreon-central
```

</TabItem>
<TabItem value="Debian 13" label="Debian 13">

```shell
apt update
apt install -y centreon-central
```

</TabItem>
</Tabs>

Exécutez ensuite les commandes suivantes sur le serveur dédié à votre base de données :

<Tabs groupId="db">
<TabItem value="MariaDB" label="MariaDB">

<Tabs groupId="os">
<TabItem value="Alma / RHEL / Oracle Linux 9" label="Alma / RHEL / Oracle Linux 9">

```shell
dnf install -y centreon-mariadb
systemctl daemon-reload
systemctl restart mariadb
```

</TabItem>
<TabItem value="Alma / RHEL / Oracle Linux 10" label="Alma / RHEL / Oracle Linux 10">

```shell
dnf install -y centreon-mariadb
systemctl daemon-reload
systemctl restart mariadb
```

</TabItem>
<TabItem value="Debian 13" label="Debian 13">

```shell
apt update
apt install -y --no-install-recommends centreon-mariadb
systemctl daemon-reload
systemctl restart mariadb
```

</TabItem>
</Tabs>

</TabItem>
<TabItem value="MySQL" label="MySQL">

<Tabs groupId="os">
<TabItem value="Alma / RHEL / Oracle Linux 9" label="Alma / RHEL / Oracle Linux 9">

```shell
dnf install -y mysql-server mysql
dnf install -y centreon-mysql centreon
systemctl enable --now mysqld
echo "default-authentication-plugin=mysql_native_password" >> /etc/my.cnf.d/mysql-server.cnf
systemctl daemon-reload
systemctl restart mysqld
systemctl list-units --type=service | grep -i mysql
sudo sed -Ei 's/LimitNOFILE\s*=\s*[0-9]+/LimitNOFILE = 32000/' /usr/lib/systemd/system/mysqld
sudo systemctl start mysqld
sudo systemctl status mysqld
```

</TabItem>
<TabItem value="Alma / RHEL / Oracle Linux 10" label="Alma / RHEL / Oracle Linux 10">

```shell
dnf install -y mysql-server mysql
dnf install -y centreon-mysql centreon
systemctl enable --now mysqld
echo "default-authentication-plugin=mysql_native_password" >> /etc/my.cnf.d/mysql-server.cnf
systemctl daemon-reload
systemctl restart mysqld
systemctl list-units --type=service | grep -i mysql
sudo sed -Ei 's/LimitNOFILE\s*=\s*[0-9]+/LimitNOFILE = 32000/' /usr/lib/systemd/system/mysqld
sudo systemctl start mysqld
sudo systemctl status mysqld
```

</TabItem>
<TabItem value="Debian 13" label="Debian 13">

```shell
apt update
apt install -y centreon-mysql
# Sélectionner "Use Legacy Authentication Method"
systemctl daemon-reload
systemctl restart mysql
```

</TabItem>
</Tabs>

</TabItem>
</Tabs>

<DatabaseConfiguration />
